--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,4 @@
-click==8.1.3
-contourpy==1.0.7
-cycler==0.11.0
-Flask==2.2.3
-fonttools==4.39.3
-itsdangerous==2.1.2
-Jinja2==3.1.2
-kiwisolver==1.4.4
-MarkupSafe==2.1.2
-matplotlib==3.7.1
-networkx==3.1
-numpy==1.24.2
-packaging==23.1
-Pillow==9.5.0
-pyparsing==3.0.9
-python-dateutil==2.8.2
-scipy==1.10.1
-six==1.16.0
-Werkzeug==2.2.3
+Flask==2.1.1
+Flask-Cors==3.0.10
+networkx==2.6.3
+matplotlib==3.4.3
